   to reduce download size. A history of changes to AVIM can be viewed at the
   project's homepage.
 - Added simplified and traditional Chinese localizations by Karan Misra.
 - Fixed removing diacritics by repeating them (e.g., entering "o^^" should
   produce "o^").
 - Relaxed the spelling rules further, allowing "p" at the beginning of a word.
   By request, "y" is also allowed where "i" would normally be used.
 - Fixed an issue where "uu" ("u+u", "uu+", etc.) in the middle of a word was
   accepted.
 - Fixed typos in the Spanish localization.

Version 20080728.210 (Tuesday, August 26, 2008)
 - Added rudimentary support for alpha versions of Komodo IDE 5.0 and Komodo
   Edit 5.0.
 - Added support for the Deepest Sender, iMacros, ReminderFox, and Zotero
   extensions.
 - Fixed removing diacritics by repeating them, this time for VNI and VIQR.
 - Fixed an issue with VIQR and VIQR* where entering "o```" added the tone mark
   back onto the vowel.
 - Rich text editors can now be ignored by the IDs of their container frames.
 - Added support for the Add-ons Manager's search bar.
 - Added support for Firebug and ScribeFire when opened in separate windows.
 - Added support for search dialogs in Thunderbird.
 - Added support for obscure types of textboxes, such as HTML's <isindex> tag.

Version 20080728.217 (Sunday, September 21, 2008)
 - Fixed an issue that prevented certain textboxes from being ignored.

Version ${Version} (${Date})
 - Added functional support for SeaMonkey 2.0; the menus may not appear in some
   types of windows.
 - Added support for Firefox 3.1 beta 1, Fennec, BlueGriffon, Komodo IDE 5 alpha
   3, and the upcoming Songbird 1.0 release.
 - Corrected errors in the French localization.
 - Fixed an issue where entering "dcd" or "dmd" added a stroke on the "d".
 - Fixed an error in Zotero's Advanced Search dialog.
 - Added support for gadgets in Google Toolbar 5.
 - Added support for the ErrorZilla Plus, WebChunks, and pyshell extensions.